src/tui/snapshots/control_acceso__tui__visual_tests__NuevoIngreso_60x22_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                            
 BRISAS CLI                        Operador de prueba · ROO 
 NUEVO INGRESO                                        ··:·· 
 ────────────────────────────────────────────────────────── 
   BUSCAR CONTRATISTA · 0 RESULTADOS                        
                                                            
 ────────────────────────────────────────────────────────── 
 CÉDULA         NOMBRE            EMPRESA      TIPO         
                                                            
           Presione / para buscar un contratista.           
                                                            
 ────────────────────────────────────────────────────────── 
 Seleccione un contratista.                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 ↑↓ Mover  ENTER Preparar  / Buscar  ESC Volver             
 F2 Salida rápida  F7 Tema                                  
                                                            

=== estilos ===
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Operador de prueba · ROO" fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"NUEVO INGRESO" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"··:··" fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"  BUSCAR CONTRATISTA · 0 RESULTADOS                       " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CÉDULA         NOMBRE            EMPRESA      TIPO        " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"          Presione / para buscar un contratista.          " fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Seleccione un contratista." fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Mover  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ENTER" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Preparar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"/" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Buscar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ESC" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Volver             " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F2" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema                                  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
